test/error/type/subrange/test-greater-low-boundary/p.pas
program test_greater_low_boundary;
type r = 5..4;
begin
end.
